--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,12 +1,10 @@
-<footer class="site-footer" role="contentinfo">
+<footer class="site-footer">
   <div class="container footer-inner">
-    <p>© <span id="year"></span> CSE Motors • Safe, simple, dependable.</p>
-    <nav aria-label="Footer">
-      <ul>
-        <li><a href="#">Privacy</a></li>
-        <li><a href="#">Terms</a></li>
-        <li><a href="#">Careers</a></li>
-      </ul>
-    </nav>
+    <p>&copy; <%= year %> CSE Motors. All rights reserved.</p>
+    <ul>
+      <li><a class="link" href="#">Privacy</a></li>
+      <li><a class="link" href="#">Terms</a></li>
+      <li><a class="link" href="#">Contact</a></li>
+    </ul>
   </div>
 </footer>
