--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,13 +1,8 @@
-<header class="site-header" role="banner">
+<header class="site-header">
   <div class="container header-inner">
-    <a class="brand" href="/" aria-label="CSE Motors Home">
-      <!-- If you have a logo: <img src="/images/logo.svg" alt="" /> -->
-      <span>CSE <strong>Motors</strong></span>
-    </a>
+    <a class="brand" href="/">CSE Motors</a>
 
-    <button class="nav-toggle" aria-expanded="false" aria-controls="primary-nav">
-      <span class="sr-only">Toggle navigation</span> ☰
-    </button>
+    <button class="nav-toggle" aria-expanded="false" aria-controls="primary-nav">Menu</button>
 
     <nav id="primary-nav" class="site-nav" aria-label="Primary">
       <ul>
@@ -15,7 +10,6 @@
         <li><a href="#">Inventory</a></li>
         <li><a href="#">Financing</a></li>
         <li><a href="#">Service</a></li>
-        <li><a href="#">Contact</a></li>
       </ul>
     </nav>
   </div>
