--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="site-footer">
   <div class="container footer-inner">
-    <p>&copy; <%= year %> CSE Motors. All rights reserved.</p>
+    <p>&copy; <span id="year"></span> CSE Motors. All rights reserved.</p>
     <ul>
       <li><a class="link" href="#">Privacy</a></li>
       <li><a class="link" href="#">Terms</a></li>
