--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 
   <!-- Styles -->
-  <link rel="stylesheet" href="/css/styles.css" media="screen" />
+  <link rel="stylesheet" href="/styles.css" media="screen" />
 
   <!-- Accessibility & SEO extras -->
   <meta property="og:title" content="<%= title %>" />
