--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,11 +1,11 @@
 <footer class="site-footer">
   <div class="container footer-inner">
     <p>&copy; <span id="year"></span> CSE Motors. All rights reserved.</p>
-    <ul>
-      <li><a class="link" href="#">Privacy</a></li>
-      <li><a class="link" href="#">Terms</a></li>
-      <li><a class="link" href="#">Contact</a></li>
-    </ul>
+    <nav class="footer-links">
+      <a class="link" href="#">Privacy</a>
+      <a class="link" href="#">Terms</a>
+      <a class="link" href="#">Contact</a>
+    </nav>
   </div>
 </footer>
 
