--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -49,8 +49,7 @@
       </nav>
     </div>
   </footer>
-  
-  <!-- One external script only (keeps CSP happy) -->
+  </script>
   <script src="/js/main.js" defer></script>
 </body>
 </html>
