--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -50,6 +50,6 @@
     </div>
   </footer>
   </script>
-  <script src="/js/main.js" defer></script>
+  <script src="/main.js" defer></script>
 </body>
 </html>
