--- a/views/app.ejs
+++ b/views/app.ejs
@@ -40,7 +40,7 @@
   </header>
 
   <main id="main" class="container">
-    <%- body %>
+    <%- body %>  <!-- Page-specific content gets injected here -->
   </main>
 
   <footer class="site-footer">
