--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -24,6 +24,6 @@
   </div>
 
   <%- include('partials/footer') %>
-  <script src="/js/main.js" defer></script>
+  <script src="/main.js" defer></script>
 </body>
 </html>
