--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -7,7 +7,7 @@
       <a class="link" href="#contact">Contact</a>
 
       <% if (showErrorLink) { %>
-        <a class="link" href="/inv/trigger-error">Trigger 500 Error</a>
+        <a class="link" href="/inv/trigger-500-error">Trigger 500 Error</a>
       <% } %>
     </nav>
   </div>
